FinalProject/force-app/main/default/objects/ProjectResource__c/ProjectResource__c.object-meta.xml
<CustomObject>
    <label>ProjectResource</label>
    <nameField>
        <label>Resource Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ProjectResources</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>