FinalProject/force-app/main/default/objects/ProjectResource__c/fields/AmountEstimated__c.field-meta.xml
<CustomField>
    <fullName>AmountEstimated__c</fullName>
    <label>AmountEstimated</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>