FinalProject/force-app/main/default/objects/ProjectResource__c/fields/EndDateResource__c.field-meta.xml
<CustomField>
    <fullName>EndDateResource__c</fullName>
    <label>EndDateResource</label>
    <required>true</required>
    <type>Date</type>
</CustomField>