FinalProject/force-app/main/default/objects/ProjectResource__c/fields/ProjectLineItem__c.field-meta.xml
<CustomField>
    <fullName>ProjectLineItem__c</fullName>
    <label>ProjectLineItem</label>
    <referenceTo>ProjectLineItem__c</referenceTo>
    <relationshipLabel>Resources Assignment</relationshipLabel>
    <relationshipName>ProjectResources</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>