FinalProject/force-app/main/default/objects/ProjectResource__c/fields/SquadLead__c.field-meta.xml
<CustomField>
    <fullName>SquadLead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SquadLead</label>
    <type>Checkbox</type>
</CustomField>