FinalProject/force-app/main/default/objects/ProjectResource__c/fields/StartDateResource__c.field-meta.xml
<CustomField>
    <fullName>StartDateResource__c</fullName>
    <label>StartDateResource</label>
    <required>true</required>
    <type>Date</type>
</CustomField>