FinalProject/force-app/main/default/objects/ProjectResource__c/fields/WorkDays__c.field-meta.xml
<CustomField>
    <fullName>WorkDays__c</fullName>
    <formula>((5 * ( FLOOR( (  EndDateResource__c - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( EndDateResource__c - DATE( 1900, 1, 8), 7 ) ) )
-
(5 * ( FLOOR( ( StartDateResource__c  - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( StartDateResource__c - DATE( 1900, 1, 8), 7 ) ) )) + 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>WorkDays</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>