FinalProject/force-app/main/default/objects/ProjectResource__c/validationRules/OnlyAssignInProjectDates.validationRule-meta.xml
<ValidationRule>
    <fullName>OnlyAssignInProjectDates</fullName>
    <active>false</active>
    <errorConditionFormula>IF(ProjectLineItem__r.Project__r.StartProject__c &gt; StartDateResource__c ||  ProjectLineItem__r.Project__r.EndProject__c &lt;  EndDateResource__c , true, false)</errorConditionFormula>
    <errorMessage>The dates entered do not correspond to the project</errorMessage>
</ValidationRule>