FinalProject/force-app/main/default/objects/ProjectResource__c/validationRules/OnlyOneSquadLead.validationRule-meta.xml
<ValidationRule>
    <fullName>OnlyOneSquadLead</fullName>
    <active>true</active>
    <errorConditionFormula>IF( (ISNEW() &amp;&amp; SquadLead__c == true &amp;&amp; !ISBLANK( ProjectLineItem__r.Project__r.SquadLead__c ) ||  ISCHANGED(SquadLead__c) &amp;&amp; !ISBLANK( ProjectLineItem__r.Project__r.SquadLead__c )) , true, false)</errorConditionFormula>
    <errorMessage>Only one SquadLead can be assigned per project</errorMessage>
</ValidationRule>