FinalProject/force-app/main/default/objects/ProjectResource__c/validationRules/StatusProject.validationRule-meta.xml
<ValidationRule>
    <fullName>StatusProject</fullName>
    <active>true</active>
    <errorConditionFormula>IF( ISNEW() &amp;&amp;  ISPICKVAL(ProjectLineItem__r.Project__r.Status__c, &apos;In Progress&apos;), true, false)</errorConditionFormula>
    <errorMessage>If the status of the project is In Progress, new assignments are not allowed.</errorMessage>
</ValidationRule>